    * 1041 aix_memory: new check for RAM and SWAP on AIX
    * 0998 ibm_imm_health: Trying to recognice newer versions of IBM IMM now too
    * 0628 raritan_pdu_inlet: now also monitors the three phases of the inlet
    * 1073 sni_octopuse_cpu: added PNP graph definition and Perf-O-Meter
    * 0178 mssql_tablespaces: It is now possible to define thresholds
    * 0994 FIX: agent plugin smart: fixed syntax error
    * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
    * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
    * 0944 FIX: oracle_tablespaces: fixed calculation of space left and number of remaining increments...
    * 1032 FIX: check_traceroute: Fix option Use DNS, worked vice versa
    * 0171 FIX: hp_blade_psu: Fixed pnp template...
    * 0996 FIX: apc_symmetra_test: Handle unknown date of last self test as intended...
    * 0173 FIX: hitachi_hnas_volume: Fixed bug when snmp outputs empty lines
    * 1037 FIX: bintec_info: support bintec RXL12500
    * 0948 FIX: mk_inventory.ps1: increased caching time to 14400, fixed incorrect default cachefile path
    * 0827 FIX: lnx_thermal: Not checking active trip points (e.g. cooling device triggers) anymore
    * 1043 FIX: printer_supply: fix value error in default parameters...
    * 0626 FIX: veeam_jobs: agent now supports output lines longer than 80 chars
    * 1072 FIX: printer_supply: fix colors of Perf-O-Meter on HP OfficeJet...
    * 0950 FIX: check_mkevents: now able to resolve the hostname of the remote hosts...
    * 0177 FIX: esx_vsphere_hostsystem.multipath: Fixed return state in case of paths in standby...

    Multisite:
    * 1013 Sort host names naturally, e.g. foobar11 comes after foobar2...
    * 1033 New Mutisite filter for the number of services a host has...
    * 0949 quicksearch: now able to search for multiple hosts at once...
    * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...